[package]
name = "rlk"
version = "0.1.0"
authors = ["Adrian Danis <rambobones@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = false

[build-dependencies]
cc = "1.0"

[dependencies]
rlibc = "1.0.0"
interpolate_idents = "0.2.4"
multiboot = "0.3.0"
bitflags = "1.0.3"
bitfield = "0.12.2"

[dependencies.x86]
version = "0.7.1"
default-features = false

[profile.release]
lto = true
