[package]
name = "rlk"
version = "0.1.0"
authors = ["Adrian Danis <rambobones@gmail.com>"]
license = "MIT"
readme = "README.md"
publish = false

[build-dependencies]
cc = "1.0"

[dependencies]
rlibc = "1.0.0"
interpolate_idents = { git = "https://github.com/AdrianDanis/interpolate_idents", branch = "nightly_fixes" }
multiboot = "0.3.0"
bitflags = "1.0.3"
bitfield = "0.12.2"
raw-cpuid = "3.1.0"

[dependencies.x86]
version = "0.9.0"
default-features = false

[profile.release]
lto = true
